--- a/pipeline/dags/pacbikes_warehouse/pacbikes_warehouse_dbt/models/final/sources.yaml
+++ b/pipeline/dags/pacbikes_warehouse/pacbikes_warehouse_dbt/models/final/sources.yaml
@@ -19,3 +19,6 @@ sources:
       - name: salesorderdetail
       - name: salesreason
       - name: currencyrate
+      - name: salespersonquotahistory
+      - name: salesterritoryhistory
+      - name: salesorderheadersalesreason
